--- a/patient-service/pom.xml
+++ b/patient-service/pom.xml
@@ -94,6 +94,20 @@
 
 
 
+
+
+		<!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-openfeign -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-openfeign</artifactId>
+		</dependency>
+
+
+
+
+
+
+
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
