--- a/healthrecordandexpertise/pom.xml
+++ b/healthrecordandexpertise/pom.xml
@@ -91,6 +91,22 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 
+
+
+
+
+		<!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-openfeign -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-openfeign</artifactId>
+		</dependency>
+
+
+
+
+
+
+
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
