--- a/appointment-service/pom.xml
+++ b/appointment-service/pom.xml
@@ -105,6 +105,18 @@
 
 
 
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-bootstrap</artifactId>
+        </dependency>
+
+
+
 
     </dependencies>
     <dependencyManagement>
