--- a/healthrecordandexpertise/pom.xml
+++ b/healthrecordandexpertise/pom.xml
@@ -106,6 +106,18 @@
 
 
 
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-bootstrap</artifactId>
+		</dependency>
+
+
+
 
 	</dependencies>
 	<dependencyManagement>
