--- a/security-service/pom.xml
+++ b/security-service/pom.xml
@@ -91,6 +91,26 @@
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
 
+
+
+
+
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-bootstrap</artifactId>
+        </dependency>
+
+
+
+
+
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
