--- a/social-service/pom.xml
+++ b/social-service/pom.xml
@@ -123,6 +123,25 @@
 		</dependency>
 
 
+
+
+
+
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-bootstrap</artifactId>
+		</dependency>
+
+
+
+
+
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
