--- a/therapy-service/pom.xml
+++ b/therapy-service/pom.xml
@@ -103,6 +103,27 @@
 
 
 
+
+
+
+
+
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-bootstrap</artifactId>
+		</dependency>
+
+
+
+
+
+
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
