--- a/social-service/src/main/resources/application.yml
+++ b/social-service/src/main/resources/application.yml
@@ -3,9 +3,9 @@ server.error.include-message: always
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/social?useSSL=false&serverTimeZone=UTC&useLegacyDatetimeCode=false
-    username: root
-    password: 12345678
+    url: jdbc:mysql://therapy-microservices.mysql.database.azure.com:3306/social?useSSL=true&serverTimeZone=UTC&useLegacyDatetimeCode=false
+    username: admin_therapy
+    password: XnySqs63R65w5KT
     driver-class-name: com.mysql.cj.jdbc.Driver
     hikari:
       initializationFailTimeout: 60000
