--- a/appointment-service/src/main/resources/application.yml
+++ b/appointment-service/src/main/resources/application.yml
@@ -1,4 +1,5 @@
-server.port: 7007
+server:
+  port: 7007
 server.error.include-message: always
 
 spring:
@@ -26,4 +27,5 @@ eureka:
       instance:
       leaseRenewalIntervalInSeconds: 5
       leaseExpirationDurationInSeconds: 5
+
 
