--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,81 +1,110 @@
 version: '3.8'
 services:
-  eureka:
-    build: ./Eureka
+  eureka-server:
+    build: ./eureka-server
     ports:
-      - "8650:8650"
+      - "4300:8761"
+    environment:
+      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://eureka:8650/eureka/
+      - EUREKA_CLIENT_REGISTER_WITH_EUREKA=false
+      - EUREKA_CLIENT_FETCH_REGISTRY=false
+  config-server:
+    build: ./config-server
+    ports:
+      - "4301:8888"
     environment:
       - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://eureka:8650/eureka/
       - EUREKA_CLIENT_REGISTER_WITH_EUREKA=false
       - EUREKA_CLIENT_FETCH_REGISTRY=false
 
-  gateway:
-    build: ./Gateway
+  gateway-service:
+    build: ./gateway-service
     ports:
-      - "8080:8080"
+      - "4302:8080"
     environment:
       - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://eureka:8761/eureka/
     depends_on:
       - eureka
 
   appointment-service:
-    build: ./Appointment-Service
+    build: ./appointment-service
     ports:
-      - "8081:8081"
+      - "4303:7007"
     environment:
+      - SPRING_DATASOURCE_URL=jdbc:mysql://therapy-microservices.mysql.database.azure.com:3306/appointment?useSSL=true&serverTimeZone=UTC&useLegacyDatetimeCode=false
+      - SPRING_DATASOURCE_USERNAME=admin_therapy
+      - SPRING_DATASOURCE_PASSWORD=XnySqs63R65w5KT
       - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://eureka:8761/eureka/
     depends_on:
       - eureka
 
-  healthrecordandexpertise:
-    build: ./Healthrecordandexpertise
+  healthrecordandexpertise-service:
+    build: ./healthrecordandexpertise
     ports:
-      - "8082:8082"
+      - "4304:7008"
     environment:
+      - SPRING_DATASOURCE_URL=jdbc:mysql://therapy-microservices.mysql.database.azure.com:3306/healthrecordandexpertise?useSSL=true&serverTimeZone=UTC&useLegacyDatetimeCode=false
+      - SPRING_DATASOURCE_USERNAME=admin_therapy
+      - SPRING_DATASOURCE_PASSWORD=XnySqs63R65w5KT
       - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://eureka:8761/eureka/
     depends_on:
       - eureka
 
   patient-service:
-    build: ./Patient-Service
+    build: ./patient-service
     ports:
-      - "8083:8083"
+      - "4305:7009"
     environment:
+      - SPRING_DATASOURCE_URL=jdbc:mysql://therapy-microservices.mysql.database.azure.com:3306/patient?useSSL=true&serverTimeZone=UTC&useLegacyDatetimeCode=false
+      - SPRING_DATASOURCE_USERNAME=admin_therapy
+      - SPRING_DATASOURCE_PASSWORD=XnySqs63R65w5KT
       - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://eureka:8761/eureka/
     depends_on:
       - eureka
 
   physiotherapist-service:
-    build: ./Physiotherapist-Service
+    build: ./physiotherapist-service
     ports:
-      - "8087:8087"
+      - "4306:7010"
     environment:
+      - SPRING_DATASOURCE_URL=jdbc:mysql://therapy-microservices.mysql.database.azure.com:3306/physiotherapist?useSSL=true&serverTimeZone=UTC&useLegacyDatetimeCode=false
+      - SPRING_DATASOURCE_USERNAME=admin_therapy
+      - SPRING_DATASOURCE_PASSWORD=XnySqs63R65w5KT
       - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://eureka:8761/eureka/
     depends_on:
       - eureka
 
   security-service:
-    build: ./Security-Service
+    build: ./security-service
     ports:
-      - "8084:8084"
+      - "4307:7011"
     environment:
+      - SPRING_DATASOURCE_URL=jdbc:mysql://therapy-microservices.mysql.database.azure.com:3306/security?useSSL=true&serverTimeZone=UTC&useLegacyDatetimeCode=false
+      - SPRING_DATASOURCE_USERNAME=admin_therapy
+      - SPRING_DATASOURCE_PASSWORD=XnySqs63R65w5KT
       - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://eureka:8761/eureka/
     depends_on:
       - eureka
   social-service:
-    build: ./Social-Service
+    build: ./social-service
     ports:
-      - "8085:8085"
+      - "4308:7012"
     environment:
+      - SPRING_DATASOURCE_URL=jdbc:mysql://therapy-microservices.mysql.database.azure.com:3306/social?useSSL=true&serverTimeZone=UTC&useLegacyDatetimeCode=false
+      - SPRING_DATASOURCE_USERNAME=admin_therapy
+      - SPRING_DATASOURCE_PASSWORD=XnySqs63R65w5KT
       - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://eureka:8761/eureka/
     depends_on:
       - eureka
 
   therapy-service:
-    build: ./Therapy-Service
+    build: ./therapy-service
     ports:
-      - "8086:8086"
+      - "4309:7013"
     environment:
+      - SPRING_DATASOURCE_URL=jdbc:mysql://therapy-microservices.mysql.database.azure.com:3306/therapy?useSSL=true&serverTimeZone=UTC&useLegacyDatetimeCode=false
+      - SPRING_DATASOURCE_USERNAME=admin_therapy
+      - SPRING_DATASOURCE_PASSWORD=XnySqs63R65w5KT
       - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://eureka:8761/eureka/
     depends_on:
       - eureka
