fix: updated I'm tired boss

--- a/appointment-service/Dockerfile
+++ b/appointment-service/Dockerfile
@@ -1,5 +1,11 @@
+# Usar la imagen oficial de OpenJDK 20
 FROM openjdk:20-jdk-slim
-COPY ./target/appointment-service-0.0.1-SNAPSHOT.jar /
-RUN sh -c 'touch appointment-service-0.0.1-SNAPSHOT.jar'
-ENTRYPOINT ["java","-jar","/appointment-service-0.0.1-SNAPSHOT.jar"]
-RUN chmod +x /appointment-service-0.0.1-SNAPSHOT.jar
+
+# Crear el directorio donde residirá la aplicación
+WORKDIR /app
+
+# Añadir el archivo .jar al contenedor
+COPY target/appointment-service-0.0.1-SNAPSHOT.jar /app/appointment-service.jar
+
+# Ejecutar la aplicación
+CMD ["java", "-jar", "appointment-service.jar"]
