--- a/patient-service/Dockerfile
+++ b/patient-service/Dockerfile
@@ -1,5 +1,11 @@
+# Usar la imagen oficial de OpenJDK 20
 FROM openjdk:20-jdk-slim
-COPY ./target/patient-service-0.0.1-SNAPSHOT.jar /
-RUN sh -c 'touch patient-service-0.0.1-SNAPSHOT.jar'
-ENTRYPOINT ["java","-jar","/patient-service-0.0.1-SNAPSHOT.jar"]
-RUN chmod +x /patient-service-0.0.1-SNAPSHOT.jar
+
+# Crear el directorio donde residirá la aplicación
+WORKDIR /app
+
+# Añadir el archivo .jar al contenedor
+COPY target/patient-service-0.0.1-SNAPSHOT.jar /app/patient-service.jar
+
+# Ejecutar la aplicación
+CMD ["java", "-jar", "patient-service.jar"]
