--- a/security-service/Dockerfile
+++ b/security-service/Dockerfile
@@ -1,5 +1,11 @@
+# Usar la imagen oficial de OpenJDK 20
 FROM openjdk:20-jdk-slim
-COPY ./target/security-service-0.0.1-SNAPSHOT.jar /
-RUN sh -c 'touch security-service-0.0.1-SNAPSHOT.jar'
-ENTRYPOINT ["java","-jar","/security-service-0.0.1-SNAPSHOT.jar"]
-RUN chmod +x /security-service-0.0.1-SNAPSHOT.jar
+
+# Crear el directorio donde residirá la aplicación
+WORKDIR /app
+
+# Añadir el archivo .jar al contenedor
+COPY target/security-service-0.0.1-SNAPSHOT.jar /app/security-service.jar
+
+# Ejecutar la aplicación
+CMD ["java", "-jar", "security-service.jar"]
