feat(Dockerization): added docker compose and api gateway to connections microservices.

--- a/config-server/Dockerfile
+++ b/config-server/Dockerfile
@@ -1,11 +1,5 @@
-# Usar la imagen oficial de OpenJDK 20
 FROM openjdk:20-jdk-slim
-
-# Crear el directorio donde residirá la aplicación
-WORKDIR /app
-
-# Añadir el archivo .jar al contenedor
-COPY target/config-server-0.0.1-SNAPSHOT.jar /app/config-server.jar
-
-# Ejecutar la aplicación
-CMD ["java", "-jar", "config-server.jar"]
+COPY ./target/config-server-0.0.1-SNAPSHOT.jar /
+RUN sh -c 'touch config-server-0.0.1-SNAPSHOT.jar'
+ENTRYPOINT ["java","-jar","/config-server-0.0.1-SNAPSHOT.jar"]
+RUN chmod +x /config-server-0.0.1-SNAPSHOT.jar
