--- a/eureka-server/Dockerfile
+++ b/eureka-server/Dockerfile
@@ -1,11 +1,5 @@
-# Usar la imagen oficial de OpenJDK 20
 FROM openjdk:20-jdk-slim
-
-# Crear el directorio donde residirá la aplicación
-WORKDIR /app
-
-# Añadir el archivo .jar al contenedor
-COPY target/eureka-server-0.0.1-SNAPSHOT.jar /app/eureka-server.jar
-
-# Ejecutar la aplicación
-CMD ["java", "-jar", "eureka-server.jar"]
+COPY ./target/eureka-server-0.0.1-SNAPSHOT.jar /
+RUN sh -c 'touch eureka-server-0.0.1-SNAPSHOT.jar'
+ENTRYPOINT ["java","-jar","/eureka-server-0.0.1-SNAPSHOT.jar"]
+RUN chmod +x /eureka-server-0.0.1-SNAPSHOT.jar
