--- a/healthrecordandexpertise/Dockerfile
+++ b/healthrecordandexpertise/Dockerfile
@@ -1,11 +1,5 @@
-# Usar la imagen oficial de OpenJDK 20
 FROM openjdk:20-jdk-slim
-
-# Crear el directorio donde residirá la aplicación
-WORKDIR /app
-
-# Añadir el archivo .jar al contenedor
-COPY target/healthrecordandexpertise-0.0.1-SNAPSHOT.jar /app/healthrecordandexpertise.jar
-
-# Ejecutar la aplicación
-CMD ["java", "-jar", "healthrecordandexpertise.jar"]
+COPY ./target/healthrecordandexpertise-0.0.1-SNAPSHOT.jar /
+RUN sh -c 'touch healthrecordandexpertise-0.0.1-SNAPSHOT.jar'
+ENTRYPOINT ["java","-jar","/healthrecordandexpertise-0.0.1-SNAPSHOT.jar"]
+RUN chmod +x /healthrecordandexpertise-0.0.1-SNAPSHOT.jar
