--- a/physiotherapist-service/Dockerfile
+++ b/physiotherapist-service/Dockerfile
@@ -1,11 +1,5 @@
-# Usar la imagen oficial de OpenJDK 20
 FROM openjdk:20-jdk-slim
-
-# Crear el directorio donde residirá la aplicación
-WORKDIR /app
-
-# Añadir el archivo .jar al contenedor
-COPY target/physiotherapist-service-0.0.1-SNAPSHOT.jar /app/physiotherapist-service.jar
-
-# Ejecutar la aplicación
-CMD ["java", "-jar", "physiotherapist-service.jar"]
+COPY ./target/physiotherapist-service-0.0.1-SNAPSHOT.jar /
+RUN sh -c 'touch physiotherapist-service-0.0.1-SNAPSHOT.jar'
+ENTRYPOINT ["java","-jar","/physiotherapist-service-0.0.1-SNAPSHOT.jar"]
+RUN chmod +x /physiotherapist-service-0.0.1-SNAPSHOT.jar
