fix: updated everything.

--- a/social-service/src/main/resources/application.yml
+++ b/social-service/src/main/resources/application.yml
@@ -27,6 +27,7 @@ eureka:
       leaseRenewalIntervalInSeconds: 5
       leaseExpirationDurationInSeconds: 5
 
-
-
+feign:
+  okhttp:
+    enabled=true:
 
